<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">记忆宝</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="des">""</string>
	
	<!-- 关于 -->
    <string name="about">关于</string>
    <string name="about_name">好学教育</string>
    <string name="about_version">v2.3.1.jztest</string>
    <string name="about_site">网址：</string>
    <string name="about_site_url">http://www.5haoxue.net/</string>
    <string name="about_service_phone">客服电话：</string>
    <string name="about_phone_number">400–0105–789</string>
    <string name="about_company">Copyright© 2004–2015</string>
    <string name="about_copyright">好学教育 All Rights Reserved</string>
    
    
    <!--选择的科目  -->
    <string name="jianzhugcngheng">建筑工程</string>
    <string name="jidiangcheng">机电工程</string>
    <string name="shizhenggyonggcheng">市政公用工程</string>
    <string name="gonglugcheng">公路工程</string>
    <string name="tongxyuguangdiangcheng">通信与广电工程</string>
    <string name="kuangyegcheng">矿业工程</string>
    <string name="tielugcheng">铁路工程</string>
    <string name="minhangjichanggcheng">民航机场工程</string>
    <string name="gangkouyuhangdaogcheng">港口与航道工程</string>
    <string name="shuilishuidiangcheng">水利水电工程</string>
    
    
    <!--考试界面 -->
    <string name="kaodian1">考点1</string>
    <string name="kaodian2">考点2</string>
    <string name="kaodian3">考点3</string>
    <string name="kaodian4">考点4</string>
    <string name="kaodian5">考点5</string>
    <string name="kaodian6">考点6</string>
    <string name="kaodian7">考点7</string>
    <string name="kaodian8">考点8</string>
    <string name="jidequanbu">记得全部考点</string>
    <string name="jide">记得</string>
    <string name="bujide">不记得</string>
    <string name="xiayige">下一个</string>
    <string name="zaicijiyi">再次记忆</string>
    <!--登陆与注册-->
    <string name="common_mail_register">邮箱注册</string>
    <string name="common_user_name">用户名</string>
    <string name="common_mail">邮箱</string>
    <string name="common_register_password">密码</string>
    <string name="common_register_ok_password">确认密码</string>
    <string name="common_register">注册</string>
    <string name="jixushangcijindu">继续上次进度</string>
    <string name="common_current_password"> 当前密码</string>
    <string name="common_setting_password"> 设置密码</string>
    <string name="coomon_ok_password"> 确认密码</string>
    <string name="confired_modify_password">确认修改</string>
    <string name="common_login_init_title">请选择你的专业</string>
    <!-- 网络异常提醒 -->
</resources>
