<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_color" >

    <include
        android:id="@+id/top"
        layout="@layout/common_title" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:layout_marginTop="30dip" >
        <RelativeLayout
            android:id="@+id/phone_number_re"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/corner_pager_main_memory_rect"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip">
            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/common_user_name"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/get_verification_code_re"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_below="@+id/phone_number_re"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip" 
            android:background="@drawable/corner_pager_main_memory_rect" >

		   <EditText
		       android:id="@+id/mail_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/common_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_re"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_below="@+id/get_verification_code_re"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/corner_pager_main_memory_rect" >

            <EditText
                android:id="@+id/setting_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/common_register_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_re_ok"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_below="@+id/password_re"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/corner_pager_main_memory_rect" >

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:gravity="left|center"
                android:hint="@string/common_register_ok_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
        
        
        <RelativeLayout
            android:id="@+id/mail_re"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_below="@+id/password_re_ok"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="40dip"
            android:background="@drawable/register_modefy_bg_button" >

            <Button
                android:id="@+id/submit_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/common_register"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>