<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_color" >

    <include
        android:id="@+id/top"
        layout="@layout/common_title" />

    <RelativeLayout
        android:id="@+id/current_re"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_marginTop="30dip"
        android:layout_marginLeft="@dimen/common_Interval_10"
        android:layout_marginRight="@dimen/common_Interval_10"
        android:paddingBottom="5dip"
        android:background="@drawable/corner_pager_main_memory_rect"
        android:paddingTop="5dip" >
        <EditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_Interval_10"
            android:layout_marginRight="@dimen/common_Interval_10"
            android:background="@null"
            android:hint="@string/common_current_password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/common_Interval_5"
            android:paddingTop="@dimen/common_Interval_5"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <requestFocus />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_re"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_re"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="@dimen/common_Interval_10"
        android:layout_marginRight="@dimen/common_Interval_10"
        android:background="@drawable/corner_pager_main_memory_rect"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <EditText
            android:id="@+id/setting_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_Interval_10"
            android:layout_marginRight="@dimen/common_Interval_10"
            android:background="@null"
            android:hint="@string/common_setting_password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/common_Interval_5"
            android:paddingTop="@dimen/common_Interval_5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/confirm_password_re"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_re"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="@dimen/common_Interval_10"
        android:layout_marginRight="@dimen/common_Interval_10"
        android:background="@drawable/corner_pager_main_memory_rect"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_Interval_10"
            android:layout_marginRight="@dimen/common_Interval_10"
            android:background="@null"
            android:hint="@string/common_register_ok_password"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/common_Interval_5"
            android:paddingTop="@dimen/common_Interval_5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/modefy_password_re"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_below="@+id/confirm_password_re"
        android:layout_marginLeft="25dip"
        android:layout_marginRight="25dip"
        android:layout_marginTop="50dip" >
        <Button
            android:id="@+id/modefy_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_button_bg"
            android:text="@string/confired_modify_password"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>